# Historian

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  REFACTOR_PLAN.md  USER_MANUAL.md  pyproject.toml  test_historian.py
.claude/: settings.json
.claude/commands/: historian-finalize.md  historian-pause.md  historian-resume.md  historian-save.md  historian-status.md
.claude/skills/historian/: SKILL.md
ai_dev_historian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: implementation.md
historian/: __main__.py  collector.py  config.py  document.py  finalize.py  hooks.py  queue.py  shadowgit.py  spawn.py  worker.py
historian/prompts/: iteration.md  summary.md
historian/providers/: __init__.py  api.py  cli.py  opencode.py  stub.py
